[gd_scene load_steps=8 format=3 uid="uid://2m7l3iog47y6"]

[ext_resource type="Script" path="res://addons/jam_essentials/scenes/scripts/GlobalCamera.gd" id="1_krm24"]
[ext_resource type="Shader" path="res://addons/jam_essentials/resources/shaders/Diamond.gdshader" id="2_60hwt"]
[ext_resource type="Texture2D" uid="uid://b7t7tfe05rn4n" path="res://resources/sprites/hud.png" id="3_r22pw"]
[ext_resource type="Texture2D" uid="uid://c81tumjtygujf" path="res://resources/sprites/itemshud.png" id="4_83n6h"]
[ext_resource type="Texture2D" uid="uid://btd4ldpx0npu7" path="res://resources/sprites/cursor.png" id="5_5icep"]
[ext_resource type="Theme" uid="uid://dty6n2jvheoev" path="res://resources/themes/main.tres" id="6_ev3un"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kk6bl"]
shader = ExtResource("2_60hwt")
shader_parameter/progress = 0.0
shader_parameter/diamondPixelSize = 50.0

[node name="GlobalCamera" type="Camera2D"]
script = ExtResource("1_krm24")

[node name="ShaderCanvas" type="ColorRect" parent="."]
z_index = 99
material = SubResource("ShaderMaterial_kk6bl")
offset_left = -1128.0
offset_top = -630.0
offset_right = 1112.0
offset_bottom = 630.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="HUD" type="Node2D" parent="."]
visible = false
z_index = 10
texture_filter = 1
position = Vector2(-240, -136)

[node name="Base" type="Sprite2D" parent="HUD"]
texture = ExtResource("3_r22pw")
centered = false

[node name="Items" type="Node2D" parent="HUD"]
position = Vector2(1.52588e-05, 0)

[node name="Item" type="Sprite2D" parent="HUD/Items"]
position = Vector2(27.9999, 33.9999)
texture = ExtResource("4_83n6h")
hframes = 5
frame = 2

[node name="Item2" type="Sprite2D" parent="HUD/Items"]
position = Vector2(69.9999, 33.9999)
texture = ExtResource("4_83n6h")
hframes = 5
frame = 2

[node name="Item3" type="Sprite2D" parent="HUD/Items"]
position = Vector2(112, 33.9999)
texture = ExtResource("4_83n6h")
hframes = 5
frame = 4

[node name="Cursor" type="Sprite2D" parent="HUD"]
position = Vector2(29, 59)
texture = ExtResource("5_5icep")
offset = Vector2(-3, 0)

[node name="Tooltip" type="RichTextLabel" parent="HUD"]
offset_left = 193.0
offset_top = 7.0
offset_right = 394.0
offset_bottom = 53.0
theme = ExtResource("6_ev3un")
theme_override_constants/outline_size = 0

[node name="Meters" type="RichTextLabel" parent="HUD"]
offset_left = 409.0
offset_top = 7.0
offset_right = 471.0
offset_bottom = 53.0
theme = ExtResource("6_ev3un")
text = "1000m"
text_direction = 2
